changed the colour cuz i forgot

--- a/style.css
+++ b/style.css
@@ -373,10 +373,10 @@ button:hover {
 
 .total-display{
     bottom: 0;
-    margin: 30px;
     padding: 30px;
-    width: 95%;
-    background-color: aquamarine;
+    width: 100%;
+    background-color: black;
+    color: white;
     position: fixed;
 }
 
