--- a/style.css
+++ b/style.css
@@ -110,7 +110,10 @@
 .register-link p a:hover{
     text-decoration: underline;
 }
-
+#lottie-animation
+ {
+    display: none;
+}
 
 
 /* START OF MAIN PAGE*/
@@ -480,4 +483,34 @@ button:hover {
     padding: 20px;
     max-width: 50%;
     text-align: center;
+}
+/*instagram button*/
+.insta{
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    background:black;
+    bottom: 40px;
+    right: 50px;
+  
+    text-decoration: none;
+    text-align: center;
+    line-height: 50px;
+    color: white;
+    font-size: 22px;
+}
+/*tiktok button*/
+.tiktok{
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    background:black;
+    bottom: 40px;
+    right: 100px;
+  
+    text-decoration: none;
+    text-align: center;
+    line-height: 50px;
+    color: white;
+    font-size: 22px;
 }
