--- a/style.css
+++ b/style.css
@@ -240,17 +240,21 @@ body.mainpage {
 /*HEADER*/
 header
 {
-  font-family: 'Kavivanar', cursive;
-
-  position: fixed;
-  left:0;
-  width:100%;
-  padding:0.8rem 5%;
-  background:black;
-  font-size: 45px;
-  color:white;
-  top:0;
-  z-index: 1000;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
+    height: 100px;
+    position: fixed;
+    left:0;
+    width:100%;
+    padding: 20px;
+    background:black;
+    font-size: 45px;
+    color:white;
+    top:0;
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /*NAV BAR*/
@@ -259,13 +263,18 @@ nav{
     height: auto;
     text-align: center;
     color: black;
-    margin-left: 00px;
     background-color: rgb(138, 138, 138);
     position: fixed;
     padding: 10px;
     top: 80px;
     width: 100%;
     z-index: 10000;
+}
+
+nav a{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: black;
+    text-decoration: none;
 }
 
 .active{
