--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     margin-top: 150px;
     box-sizing: border-box;
     justify-content: center;
-    background-image: url(/images/login-background.jpeg);
+    background-image: url(images/hi.jpeg);
     background-size: cover;
     align-items: center;
 }
